pilot/pkg/security/authz/builder/testdata/allow-all-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.config.filter.http.rbac.v2.RBAC
  rules:
    policies:
      ns[foo]-policy[allow-all]-rule[0]:
        permissions:
        - andRules:
            rules:
            - any: true
        principals:
        - andIds:
            ids:
            - any: true
